# exponential_smoothing

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  conanfile.txt  install.sh
cmake/: Install.cmake
demos/: CMakeLists.txt  main.cpp
include/: holt_linear_trend.hpp  holt_winters.hpp
scripts/: data_generator.py  forecast_comparison.py  requirements.txt
src/: holt_linear_trend.cpp  holt_winters.cpp
tests/: CMakeLists.txt  dummy_test.cpp  holt_linear_trend_test.cpp
